--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.1",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.2"
   },
