--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
     "react-router-dom": "^7.5.0",
-    "recharts": "^2.15.2"
+    "react-slick": "^0.30.3",
+    "recharts": "^2.15.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
