--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=https://samcarrental.com/api
+REACT_APP_API_URL=https://sam-car-rent-service-backend.vercel.app
+
 VITE_API_URL=http://localhost:5000/api
