--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://sam-car-rent-service-backend.vercel.app
+REACT_APP_API_URL=https://sam-car-rent-service-backend.vercel.app/api
 
 VITE_API_URL=http://localhost:5000/api
